[1회차] Controller와 RestController

--- a/spring/demo/src/main/resources/templates/basic/first/whatTimeIsIt.html
+++ b/spring/demo/src/main/resources/templates/basic/first/whatTimeIsIt.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <h1>안녕 난 스프링이야!</h1>
+    <!-- thymeleaf 형태의 text 출력: model.addAttribute()에서 맵핑된 servTime을 출력하라고 하니
+         앞서 formattedDate가 기입된 servTime의 결과가 화면에 출력되는 것! -->
     <p th:text="${servTime}"></p>
 </body>
 </html>
