--- a/spring/demo/src/main/resources/templates/basic/nineteenth/list-tag.html
+++ b/spring/demo/src/main/resources/templates/basic/nineteenth/list-tag.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>웹 HTML 기초</h1>
+    <h3>크기 테스트</h3>
 
     <ul>
         <li>HTML</li>
@@ -13,5 +14,11 @@
         <li>CSS</li>
         <li>HTML</li>
     </ul>
+    <ol>
+        <li>HTML</li>
+        <li>Java</li>
+        <li>CSS</li>
+        <li>HTML</li>
+    </ol>
 </body>
 </html>
