feat: 20th - HTML/CSS Basics 2 [HTML-CSS-BASICn]

--- a/spring/demo/src/main/resources/templates/basic/twentieth/radio-btn-test.html
+++ b/spring/demo/src/main/resources/templates/basic/twentieth/radio-btn-test.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="/css/checkbox-list.css">
 </head>
 <body>
     <h3>코스(다중 선택 불가능)</h3>
@@ -10,7 +11,7 @@
     <ul>
         <li>
             <!-- 주의: radio 버튼에서 단일 선택 기능은 name으로 같은 사항을 묶어놔야 동작 -->
-            <label><input type="radio" name="subject" value="grammer">영문법</label>
+            <input type="radio" name="subject" value="grammer">영문법
         </li>
         <li>
             <label><input type="radio" name="subject" value="math">수학</label>
