feat: 20th - HTML/CSS Basics 2 [HTML-CSS-BASICn]

--- a/spring/demo/src/main/resources/templates/basic/twentieth/login-form-test2.html
+++ b/spring/demo/src/main/resources/templates/basic/twentieth/login-form-test2.html
@@ -18,6 +18,9 @@
                     <label for="pw">비밀번호</label>
                     <input type="password" id="pw">
                 </li>
+                <li>
+                    <input type="submit" value="로그인">
+                </li>
             </ul>
         </fieldset>
     </form>
